# CarWashBot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  pyproject.toml  requirements.txt
app/: __main__.py  bot.py  config.py  nats.py
