[project]
name = 'SmartWashBot'
version = '0.1.0'
description = 'Телеграм бот для просмотра информации о распознных машинах'

dependencies = [
    "sentry-sdk",
    "aiogram",
    "nats-py",
    "pydantic-settings",
    "pre-commit"
]


[tool.setuptools]
py-modules = []

[tool.isort]
profile = 'black'
line_length = 120
lines_after_imports = 2
force_alphabetical_sort_within_sections = true

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.flake8]
max-line-length = 120
